--- a/views/tasks.erb
+++ b/views/tasks.erb
@@ -1,6 +1,9 @@
-<h1>Hello Tast-Master Blasters!</h1>
+<h1>Hello Taste-Master Blasters!</h1>
 <!-- <p>
-  <% @all_tasks.each do |row| %>
-    <%= row %>
-  <% end %>
+  <%# @all_tasks.each do |row| %>
+    <#%= row %>
+  <% #end %>
 </p> -->
+
+
+<a href="/create_tasks">Click</a> to create a new task!
