--- a/views/create_tasks.erb
+++ b/views/create_tasks.erb
@@ -1,17 +1,17 @@
 <h1> Welcome to creating a instance of chores!</h1>
 
-<form>
+<form action="" method="post" accept-charset="utf-8">
   <fieldset>
     <legend>New Task</legend>
 
     <label for="Name">Name</label>
-    <input type="text" name="Name" value="(required)" id="Name" required>
+    <input type="text" name="new_task[]" value="(required)" id="Name" required>
 
     <label for="Description">Description</label>
-    <input type="text" name="Desription" value="(optional)" id="Description">
+    <input type="text" name="new_task[]" value="(optional)" id="Description">
 
     <label for="Completion_Date">Completion Date</labe>
-    <input type="text" name="Completion_Date" value="(optional)" id="Completion_Date">
+    <input type="text" name="new_task[]" value="(optional)" id="Completion_Date">
   </fieldset>
 
     <input type="submit" value="Create Task">
