--- a/views/create_tasks.erb
+++ b/views/create_tasks.erb
@@ -5,13 +5,13 @@
     <legend>New Task</legend>
 
     <label for="Name">Name</label>
-    <input type="text" name="new_task[]" value="(required)" id="Name" required>
+    <input type="text" name="new_task[name]" value="(required)" id="Name" required>
 
     <label for="Description">Description</label>
-    <input type="text" name="new_task[]" value="(optional)" id="Description">
+    <input type="text" name="new_task[description]" value="(optional)" id="Description">
 
     <label for="Completion_Date">Completion Date</labe>
-    <input type="text" name="new_task[]" value="(optional)" id="Completion_Date">
+    <input type="text" name="new_task[date]" value="(optional)" id="Completion_Date">
   </fieldset>
 
     <input type="submit" value="Create Task">
