--- a/views/create_tasks.erb
+++ b/views/create_tasks.erb
@@ -1,6 +1,6 @@
 <h1> Welcome to creating a instance of chores!</h1>
 
-<form action="" method="post" accept-charset="utf-8">
+<form action="" method="post" accept-charset="utf-8"> # need method='post' in form tag to create
   <fieldset>
     <legend>New Task</legend>
 
