--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,5 +5,11 @@
   </head>
   <body>
     <%= yield %>
+
+    <p>
+      <a href="/">Home</a>
+      |
+      <a href="/create_tasks">Create Tasks</a>
+    </p>
   </body>
 </html>
