Delete buttons now work. This is a good day.

--- a/views/delete.erb
+++ b/views/delete.erb
@@ -1,12 +1,14 @@
 <h1>Delete Confirmation</h1>
 
 <h2>Are you sure you want to delete it?</h2>
-<form action ='' method ="">
+<h3>
+<pre>
+  <%= params[:id] %>
+</pre>
+</h3>
+
+<form action ='' method ="post">
   <input type="radio" label ="no" name="decide" value="no"> No</label>
   <input type="radio" label ="yes" name="decide" value="yes">Yes</label>
   <input type="submit" value="I'm Sure">
 </form>
-
-<pre>
-  <%= params %>
-</pre>
