Completed breakfast and lunch delete feature. Cleaned up obsolete code and added comments. Broke and fixed it a few times in there too.

--- a/views/delete.erb
+++ b/views/delete.erb
@@ -1,14 +1,10 @@
 <h1>Delete Confirmation</h1>
 
 <h2>Are you sure you want to delete it?</h2>
-<h3>
-<pre>
-  <%= params[:id] %>
-</pre>
-</h3>
 
-<form action ='' method ="post">
+<form action ="" method ="post">
+  <!-- name is the data key, value is the data value in key/value pair -->
   <input type="radio" label ="no" name="decide" value="no"> No</label>
   <input type="radio" label ="yes" name="decide" value="yes">Yes</label>
-  <input type="submit" value="I'm Sure">
+  <input type="submit" value="Decide!">
 </form>
