--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,8 +4,10 @@
 
   </head>
   <body>
+    <!-- page-specific content -->
     <%= yield %>
 
+    <!-- naviation links -->
     <p>
       <a href="/">Home</a>
       |
