--- a/views/create_tasks.erb
+++ b/views/create_tasks.erb
@@ -1,8 +1,10 @@
-<h1> Welcome to creating a instance of chores!</h1>
+<h1> Create tasks!</h1>
 
-<form action="" method="post" accept-charset="utf-8"> # need method='post' in form tag to create
+<form action="" method="post" accept-charset="utf-8"> <!-- need method='post' in form tag to create -->
   <fieldset>
     <legend>New Task</legend>
+
+    <!-- new_task collects an array of all the task data together -->
 
     <label for="Name">Name</label>
     <input type="text" name="new_task[name]" value="(required)" id="Name" required>
@@ -14,12 +16,12 @@
     <input type="text" name="new_task[date]" value="(optional)" id="Completion_Date">
   </fieldset>
 
-    <input type="submit" value="Create Task">
+    <input type="submit" value="Create Task!">
 </form>
 
-
-
-
-<pre>
-  <%= params %>
-</pre>
+<p>
+  Task added:
+  <pre>
+    <%= params %>
+  </pre>
+</p>
